--- a/public/fruitdetails.html
+++ b/public/fruitdetails.html
@@ -8,6 +8,6 @@
         <p>{{fruit.detail}}</p>
     </div>
     <br/>
-    <a class="btn btn-default" ui-sref="editfruit({fruitname:fruit.title})">Edit Info</a>
+    <a class="btn btn-default" ui-sref="editfruit({fruitId:fruit._id})">Edit Info</a>
     <a class="btn btn-danger" ng-click="remove()">Delete Fruit</a>
 </div>
