--- a/public/editfruit.html
+++ b/public/editfruit.html
@@ -1,7 +1,7 @@
 <div class="container form">
     <br>
     <br>
-    <form ng-submit="update(fruitname)">
+    <form ng-submit="update()">
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" id="name" ng-model="fruit.title" placeholder="name" autofocus/>
